<resources>
    <string name="app_name">ProyectoFinal</string>
    <string name="bienvenido">Bienvenido a Dogtor</string>
    <string name="Desarollado">Desarollado por : Oliver Graf, Kristen Brandt</string>
    <string name="title_activity_login">Log In</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>

    <string name="log_in">Log In</string>
    <string name="sign_in">Sign Up</string>

    <!-- Strings related to introapp -->
    <string name="User">Username</string>
    <string name="pass">Password</string>
    <string name="logs">Log In</string>
    <string name="o">O</string>
    <string name="Sign">Sign Up</string>
    <string name="Crea">Crear un usuario nuevo</string>

    <!-- Strings related to signup -->
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="SignUp">Sign Up</string>
    <string name="Ya">Ya tengo una cuenta en Dogtor</string>
    <string name="logn">Log In</string>

    <!-- Strings related to menu -->
    <string name="perfil">Ir a perfil</string>
    <string name="creditos">Creditos</string>
    <string name="sitios">Sitios Web</string>
    <string name="salud">Salud</string>
    <string name="logoff">Log Off</string>
    <string name="notificacion">Notificaciones</string>

    <!-- Strings related to websites -->
    <string name="purina">Ir a website de Purina</string>
    <string name="marcas">Ir a website de Petsmart</string>
    <string name="arca">Ir a website de Arca de Noe</string>

    <!-- Strings related to creditos -->
    <string name="desarollo">Dogtor fue desarollado por:</string>
    <string name="nombres">Oliver Graf Carné 17190,
        Kristen Brandt Carné 171482</string>

    <!-- Strings related to perfil -->
    <string name="comentarios">comentarios hechos</string>
    <string name="puntaje">Puntaje</string>


</resources>
