<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup">

    <Button
        android:id="@+id/create_button"
        android:layout_width="318dp"
        android:layout_height="73dp"
        android:layout_marginEnd="47dp"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="47dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="36dp"
        android:text="@string/SignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:text="Sign UP" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="339dp"
        android:layout_height="76dp"
        android:layout_marginEnd="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:hint="@string/error_field_required"
        android:inputType="textEmailAddress"
        android:text="@string/Username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Username" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="333dp"
        android:layout_height="68dp"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginRight="39dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/error_field_required"
        android:inputType="textPassword"
        android:text="@Password"
        app:layout_constraintBottom_toTopOf="@+id/create_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:text="Password" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="25dp"
        android:layout_height="43dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="187dp"
        android:layout_marginLeft="187dp"
        android:layout_marginRight="187dp"
        android:layout_marginStart="187dp"
        android:layout_marginTop="48dp"
        android:text="@string/o"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_button"
        tools:text="O" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="307dp"
        android:layout_height="50dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="37dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="37dp"
        android:layout_marginStart="32dp"
        android:text="@string/Ya"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/account_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Ya tengo una cuenta en Dogtor" />

    <Button
        android:id="@+id/account_button"
        android:layout_width="331dp"
        android:layout_height="68dp"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="37dp"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="37dp"
        android:layout_marginStart="34dp"
        android:text="@string/logn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Log In" />
</android.support.constraint.ConstraintLayout>