<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu">

    <Button
        android:id="@+id/perfil_button"
        android:layout_width="259dp"
        android:layout_height="79dp"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:layout_marginBottom="16dp"
        android:text="@string/perfil"
        app:layout_constraintBottom_toTopOf="@+id/salud_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/salud_button"
        android:layout_width="167dp"
        android:layout_height="69dp"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="197dp"
        android:layout_marginRight="197dp"
        android:layout_marginBottom="17dp"
        android:text="@string/salud"
        app:layout_constraintBottom_toTopOf="@+id/sitios_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/perfil_button" />

    <Button
        android:id="@+id/logoff_button"
        android:layout_width="166dp"
        android:layout_height="70dp"
        android:layout_marginStart="207dp"
        android:layout_marginLeft="207dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginBottom="69dp"
        android:text="@string/logoff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creditos_button" />

    <Button
        android:id="@+id/creditos_button"
        android:layout_width="163dp"
        android:layout_height="67dp"
        android:layout_marginStart="207dp"
        android:layout_marginLeft="207dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:layout_marginBottom="20dp"
        android:text="@string/creditos"
        app:layout_constraintBottom_toTopOf="@+id/logoff_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificaciones_button" />

    <Button
        android:id="@+id/notificaciones_button"
        android:layout_width="167dp"
        android:layout_height="72dp"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="197dp"
        android:layout_marginRight="197dp"
        android:layout_marginBottom="290dp"
        android:text="@string/notificacion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sitios_button" />

    <Button
        android:id="@+id/sitios_button"
        android:layout_width="167dp"
        android:layout_height="72dp"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="197dp"
        android:layout_marginRight="197dp"
        android:layout_marginBottom="13dp"
        android:text="@string/sitios"
        app:layout_constraintBottom_toTopOf="@+id/notificaciones_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salud_button" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="425dp"
        android:layout_height="417dp"
        android:layout_marginBottom="288dp"
        android:contentDescription="@background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

</android.support.constraint.ConstraintLayout>