<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".introapp">

    <Button
        android:id="@+id/log_button"
        android:layout_width="285dp"
        android:layout_height="80dp"
        android:layout_marginBottom="232dp"
        android:layout_marginEnd="48dp"
        android:layout_marginLeft="49dp"
        android:layout_marginRight="48dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="232dp"
        android:text="@string/logs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Log In" />

    <Button
        android:id="@+id/sign_button"
        android:layout_width="285dp"
        android:layout_height="72dp"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="48dp"
        android:layout_marginLeft="49dp"
        android:layout_marginRight="48dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="141dp"
        android:text="@string/Sign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_button"
        app:layout_constraintVertical_bias="1.0"
        tools:text="Sign Up" />

    <EditText
        android:id="@+id/username_button"
        android:layout_width="287dp"
        android:layout_height="58dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="48dp"
        android:layout_marginLeft="49dp"
        android:layout_marginRight="48dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="62dp"
        android:ems="10"
        android:hint="@string/error_field_required"
        android:inputType="textEmailAddress"
        android:text="@string/User"
        app:layout_constraintBottom_toTopOf="@+id/password_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Username" />

    <EditText
        android:id="@+id/password_button"
        android:layout_width="288dp"
        android:layout_height="53dp"
        android:layout_marginBottom="39dp"
        android:layout_marginEnd="47dp"
        android:layout_marginLeft="49dp"
        android:layout_marginRight="47dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/error_field_required"
        android:inputType="textPassword"
        android:text="@pass"
        app:layout_constraintBottom_toTopOf="@+id/log_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_button"
        tools:text="Password" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="27dp"
        android:layout_height="34dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="178dp"
        android:layout_marginLeft="179dp"
        android:layout_marginRight="178dp"
        android:layout_marginStart="179dp"
        android:layout_marginTop="8dp"
        android:text="@string/o"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/sign_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_button"
        app:layout_constraintVertical_bias="0.692"
        tools:text="O" />

</android.support.constraint.ConstraintLayout>